CR-19 Admin panel
### Features:
- removed lib docs;
- finalized navbar/sidebar;
- finalized authentication;
- started working on articles addition

--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -1,2 +1,5 @@
-you better log in
-<button (click)="signIn()">I do</button>
+<form [formGroup]="signInForm">
+    <input placeholder="Email" [formControl]="signInForm.controls['email']" />
+    <input placeholder="Password" [formControl]="signInForm.controls['password']" />
+</form>
+<button (click)="signIn()">Sign in</button>
