--- a/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
+++ b/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-9"></div>
+            <div class="col-md-3">
+                <button (click)="openAddNodeModal()">Open modal</button>
+            </div>
+        </div>
+    </div>
+</div>
