CR-19 Admin panel
### Features:
- finished mechanism of gathering nodes from different components;
- working on parallel uploading of images

--- a/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
@@ -1,6 +1,7 @@
 adding node!
 
 <ng-container [ngSwitch]="currentNodeType">
-    <app-configure-article-header *ngSwitchCase="NODE_TYPES.HEADER">
+    <app-configure-article-header *ngSwitchCase="NODE_TYPES.HEADER"
+        (onSubmit)="onNodeSubmitted($event)">
     </app-configure-article-header>
 </ng-container>
