--- a/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
+++ b/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
@@ -4,6 +4,7 @@
             <div class="col-md-9"></div>
             <div class="col-md-3">
                 <button (click)="openAddNodeModal()">Open modal</button>
+                <button (click)="publish()">Publish</button>
             </div>
         </div>
     </div>
