--- a/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
@@ -1,7 +1,10 @@
 adding node!
 
+<span *ngIf="!!nodeToEdit">(actually editing)</span>
+
 <ng-container [ngSwitch]="currentNodeType">
     <app-configure-article-header *ngSwitchCase="NODE_TYPES.HEADER"
+        [nodeToEdit]="nodeToEdit"
         (onSubmit)="onNodeSubmitted($event)">
     </app-configure-article-header>
 </ng-container>
