--- a/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
+++ b/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
@@ -13,7 +13,7 @@
                         <div class="stats" (click)="openEditNodeModal(i)">
                             <i class="material-icons">edit</i> Edit
                         </div>
-                        <div class="stats">
+                        <div class="stats" (click)="deleteNode(i)">
                             <i class="material-icons">delete</i> Delete
                         </div>
                     </div>
