CR-19 Admin panel
### Features:
- check if image deletion is required on server every time image is updated on client;
- preloading image to use as a file if it was uploaded to server before

--- a/src/app/components/image-preview/image-preview.component.html
+++ b/src/app/components/image-preview/image-preview.component.html
@@ -1,3 +1,3 @@
 <div class="image-preview-container">
-    <img class="image-element" [src]="imageDataURL" *ngIf="!!imageDataURL" />
+    <img class="image-element" [src]="imageSource" *ngIf="!!imageSource" />
 </div>
