--- a/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
+++ b/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
@@ -21,6 +21,7 @@
             </div>
             <div class="col-md-3">
                 <button (click)="openAddNodeModal()">Add node</button>
+                <button (click)="uploadImages()">Upload images</button>
                 <button (click)="publish()">Publish</button>
             </div>
         </div>
