--- a/src/app/views/articles-add-and-edit/add-or-edit-node/configure-article-header/configure-article-header.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/configure-article-header/configure-article-header.component.html
@@ -39,6 +39,8 @@
 
 <button class="btn btn-primary btn-block" type="button" mat-button
     [disabled]="nodeForm.invalid"
-    (click)="submit()">
-    Add article header
+    (click)="submit()" [ngSwitch]="!!nodeToEdit">
+    <ng-container *ngSwitchCase="true">Edit</ng-container>
+    <ng-container *ngSwitchCase="false">Add</ng-container>
+    article header block
 </button>
