CR-19 Admin panel
### Features:
- editing general article settings

--- a/src/app/views/articles-add-and-edit/add-or-edit-node/configure-article-header/configure-article-header.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/configure-article-header/configure-article-header.component.html
@@ -23,7 +23,7 @@
     </div>
 </form>
 
-<span class="fon text-danger" *ngIf="nodeForm.controls[FormsContract.NodeHeader.BACKGROUND_IMAGE].hasError(FormsContract.Errors.REQUIRED)">
+<span class="text-danger" *ngIf="nodeForm.controls[FormsContract.NodeHeader.BACKGROUND_IMAGE].hasError(FormsContract.Errors.REQUIRED)">
     Background image is required!
 </span>
 <span class="text-danger" *ngIf="nodeForm.controls[FormsContract.NodeHeader.BACKGROUND_IMAGE].hasError(FormsContract.Errors.IMAGE_TOO_LARGE)">
