--- a/src/app/components/image-preview/image-preview.component.html
+++ b/src/app/components/image-preview/image-preview.component.html
@@ -1,3 +1,3 @@
 <div class="image-preview-container">
-    <img class="image-element" [src]="imageSource" *ngIf="!!imageSource" />
+    <img class="image-element" [src]="imageSource | async" />
 </div>
