CR-19 Admin panel
### Features:
- correctly processing preview images from article settings

--- a/src/app/views/articles-add-and-edit/article-settings/article-settings.component.html
+++ b/src/app/views/articles-add-and-edit/article-settings/article-settings.component.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <app-image-preview
+    <app-image-preview #articlePreview
         [file]="settingsForm.controls[FormsContract.ArticleSettings.PREVIEW_IMAGE].valueChanges | async"
         (onError)="onImagePreviewError($event)">
     </app-image-preview>
