CR-20 Admin panel
### Features:
- using different endpoint when editing articles

--- a/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
+++ b/src/app/views/articles-add-and-edit/articles-add-and-edit.component.html
@@ -23,7 +23,9 @@
                 <button (click)="openAddNodeModal()">Add node</button>
                 <button (click)="uploadImages()">Upload images</button>
                 <button (click)="openSettingsModal()">Settings</button>
-                <button (click)="publish()">Publish</button>
+                <button (click)="publishOrEdit()">
+                    {{ isEditing ? 'Edit' : 'Publish' }}
+                </button>
             </div>
         </div>
     </div>
