CR-19 Admin Panel
### Features:
- added possibility to add H2 / H3 titles to articles via admin panel

--- a/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
@@ -25,4 +25,14 @@
         [nodeToEdit]="nodeToEdit"
         (onSubmit)="onNodeSubmitted($event)">
     </app-configure-common-text>
+
+    <app-configure-image *ngSwitchCase="NODE_TYPES.IMAGE"
+        [nodeToEdit]="nodeToEdit"
+        (onSubmit)="onNodeSubmitted($event)">
+    </app-configure-image>
+
+    <app-configure-section-title *ngSwitchCase="NODE_TYPES.SECTION_TITLE"
+        [nodeToEdit]="nodeToEdit"
+        (onSubmit)="onNodeSubmitted($event)">
+    </app-configure-section-title>
 </ng-container>
