CR-10 Admin panel
### Features:
- added block with key moment;
- added general interface for blocks with oext;
- working on transforming text nodes

--- a/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
+++ b/src/app/views/articles-add-and-edit/add-or-edit-node/add-or-edit-node.component.html
@@ -35,4 +35,9 @@
         [nodeToEdit]="nodeToEdit"
         (onSubmit)="onNodeSubmitted($event)">
     </app-configure-section-title>
+
+    <app-configure-key-moment *ngSwitchCase="NODE_TYPES.KEY_MOMENT"
+        [nodeToEdit]="nodeToEdit"
+        (onSubmit)="onNodeSubmitted($event)">
+    </app-configure-key-moment>
 </ng-container>
